Sada kompletan tok rada radi, potrebna personalizacija dodatnih parametara

--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -54,6 +54,7 @@ http://www.templatemo.com/tm-398-nature
                     <img src="images/nature3.jpg" id="services-img"  class="inactive" alt="Services">
                     <img src="images/nature4.jpg" id="testimonial-img" class="inactive" alt="Testimonial">
                     <img src="images/nature5.jpg" id="contact-img" class="inactive" alt="Contact">
+                    <img src="images/nature6.jpg" id="settings-img" class="inactive" alt="Settings">
                 </div>
             </div>
 
@@ -62,14 +63,14 @@ http://www.templatemo.com/tm-398-nature
                     <div class="templatemo-content">
 
                         <section id="home-text" class="active">
-                            <div class="col-sm-6 col-md-12 col-lg-6">
+                            <div class="col-sm-12 col-md-12 col-lg-12">
                                 <h2>Ovde ide profilna strana</h2>
-                                <!--<p>Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. </p>-->
-                                <!--<p> Ovo je neka rečenica. Ovo je neka rečenica.-->
-                                    <!--<a rel="nofollow" href="http://unsplash.com" target="_blank">Ovo je neki link.</a>-->
-                                <!--</p>-->
-                                <!--<p> Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. </p>-->
-                                <!--<p> Ovo je neka rečenica. Ovo je neka rečenica.</p>-->
+                                <p>Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. </p>
+                                <p> Ovo je neka rečenica. Ovo je neka rečenica.
+                                    <a rel="nofollow" href="http://unsplash.com" target="_blank">Ovo je neki link.</a>
+                                </p>
+                                <p> Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. </p>
+                                <p> Ovo je neka rečenica. Ovo je neka rečenica.</p>
                                 <p>Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka
                                     rečenica. Ovo je neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica. Ovo je
                                     neka rečenica. Ovo je neka rečenica. Ovo je neka rečenica.
@@ -111,21 +112,40 @@ http://www.templatemo.com/tm-398-nature
                         </section><!-- /.services-text -->
 
                         <section id="testimonial-text" class="inactive">
-                            <div class="col-sm-6 col-md-6">
+                            <div class="col-sm-12 col-md-12">
                                 <h2>Poruke</h2>
-                                <p>Ovde idu poruke koje se otvaraju pomoću klika na korisnika ili se na dugme dodavanje
-                                    doda nov i prazan razgovor.</p>
-                                <p>Our Services. Ovo je jedna rečenica. Ovo je jedna rečenica. Ovo je jedna rečenica.
-                                    Ovo je jedna rečenica. Ovo je jedna rečenica. Ovo je jedna rečenica. Ovo je jedna
-                                    rečenica. Ovo je jedna rečenica.</p>
+                                <div class="col-sm-12 col-md-12">
+                                    <form action="#" method="post">
+
+                                        <div class="form-group">
+                                            <!--<label for="contact_name">Name:</label>-->
+                                            <input type="text" id="contact_name" class="form-control"
+                                                   placeholder="Name"/>
+                                        </div>
+                                        <div class="form-group">
+                                            <!--<label for="contact_email">Email:</label>-->
+                                            <input type="text" id="contact_email" class="form-control"
+                                                   placeholder="Email Address"/>
+                                        </div>
+                                        <div class="form-group">
+                                            <!--<label for="contact_message">Message:</label>-->
+                                            <textarea id="contact_message" class="form-control" rows="7"
+                                                      placeholder="Write a message"></textarea>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Send</button>
+
+                                    </form>
+                                </div>
                             </div>
                         </section><!-- /.testimonial-text -->
 
                         <section id="settings-text" class="inactive">
-                            <div class="col-sm-6 col-md-6">
+                            <div class="col-sm-12 col-md-12">
                                 <h2>Podešavanja</h2>
-                                <p>Ovde idu podešavanja. Ovde idu podešavanja.</p>
-                                <p>Ovde idu podešavanja. Ovde idu podešavanja.</p>
+                                <p>Ovde idu podešavanja. </p>
+                                <p>Ovo je jedna rečenica. Ovo je jedna rečenica. Ovo je jedna rečenica.
+                                    Ovo je jedna rečenica. Ovo je jedna rečenica. Ovo je jedna rečenica. Ovo je jedna
+                                    rečenica. Ovo je jedna rečenica.</p>
                             </div>
                         </section><!-- /.settings-text -->
 
@@ -140,29 +160,6 @@ http://www.templatemo.com/tm-398-nature
                                     <div class="col-sm-6 col-md-6">
                                         <div id="map-canvas"></div>
                                         <p>990 Digital Street, New Forest Area, San Francisco, CA 10660</p>
-                                    </div>
-
-                                    <div class="col-sm-6 col-md-6">
-                                        <form action="#" method="post">
-
-                                            <div class="form-group">
-                                                <!--<label for="contact_name">Name:</label>-->
-                                                <input type="text" id="contact_name" class="form-control"
-                                                       placeholder="Name"/>
-                                            </div>
-                                            <div class="form-group">
-                                                <!--<label for="contact_email">Email:</label>-->
-                                                <input type="text" id="contact_email" class="form-control"
-                                                       placeholder="Email Address"/>
-                                            </div>
-                                            <div class="form-group">
-                                                <!--<label for="contact_message">Message:</label>-->
-                                                <textarea id="contact_message" class="form-control" rows="7"
-                                                          placeholder="Write a message"></textarea>
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Send</button>
-
-                                        </form>
                                     </div>
 
                                     <div class="clearfix"></div>
@@ -184,7 +181,8 @@ http://www.templatemo.com/tm-398-nature
         <div id="preloader">
             <div id="status">&nbsp;</div>
         </div><!-- /#preloader -->
-        
+
+        <script src="js/angular.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery.backstretch.min.js"></script>
         <script src="js/spajalica_script.js"></script>
