mala promena stilova

--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -41,7 +41,7 @@
                     <li class="news-menu"><a href="#news">Novosti</a></li>
                     <li class="match-menu"><a href="#match">Spoji!</a></li>
                     <li class="messages-menu"><a href="#messages">Poruke</a></li>
-                    <li class="suggestions-menu"><a href="#suggestions">Predlozi</a></li>
+                    <li class="suggestions-menu"><a href="#suggestions">Pretraga</a></li>
                     <li class="settings-menu"><a href="#settings">Podešavanja</a></li>
                 </ul>
             </div><!-- /.menu -->
@@ -52,7 +52,7 @@
                     <img src="images/nature2.jpg" id="news-img" class="inactive" alt="News">
                     <img src="images/nature3.jpg" id="match-img"  class="inactive" alt="Match">
                     <img src="images/nature4.jpg" id="messages-img" class="inactive" alt="Messages">
-                    <img src="images/nature5.jpg" id="suggestions-img" class="inactive" alt="Suggestions">
+                    <img src="images/moustaches.png" id="suggestions-img" class="inactive" alt="Suggestions">
                     <img src="images/nature6.jpg" id="settings-img" class="inactive" alt="Settings">
                 </div>
             </div>
@@ -181,7 +181,7 @@
                         <section id="suggestions-text" class="inactive">
                             <div class="col-sm-12 col-md-12">
                                 <div class="row">
-                                    <div class="col-sm-12 col-md-12"><h2>Predlozi</h2></div>
+                                    <div class="col-sm-12 col-md-12"><h2>Pretraga</h2></div>
                                     <div class="clearfix"></div>
                                 </div>
 
