Mali dizajn commit

--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -68,7 +68,7 @@
                                 <h2>Ovde ide profilna strana</h2>
                                 <p>Ovde dolazi PRVI_BROJ: <input ng-model="prviBroj" type="number"/> </p>
                                 <p>Ovde dolazi DRUGI_BROJ: <input ng-model="drugiBroj" type="number"/> </p>
-                                <p> <input type="button" value="Vrati" ng-click="postdata(prviBroj, drugiBroj)" /> nešto sa BE: {{ prom1 }} {{ prom2 }} </p>
+                                <p> <input type="button" value="Vrati" ng-click="postdata(prviBroj, drugiBroj)" /> nešto sa BE: Prvi: {{ prom1 }}| Drugi: {{ prom2 }} </p>
                                 <p>Output Message : {{msg}}</p>
                                 <p>StatusCode: {{statusval}}</p>
                                 <p>Status: {{statustext}}</p>
