Додата логин страна са које се улази у сајт: треба је уклопити у целину

--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width">
 
         <script src="js/angular.min.js"></script>
-        <script src="js/ProfileController.js"></script>
+        <script src="js/Controllers/ProfileController.js"></script>
         <!-- Google Web Font Embed -->
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,600,500,300,700' rel='stylesheet' type='text/css'>
 
