--- a/SpajalicaFrontEnd/Login.html
+++ b/SpajalicaFrontEnd/Login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="SpajalicaFrontEnd">
 <head>
     <meta charset="UTF-8">
     <title>Улогујте се</title>
@@ -7,6 +7,8 @@
     <script src="js/jquery.backstretch.min.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/login_script.js"></script>
+    <script src="js/Controllers/LoginController.js"></script>
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style_login.css">
 </head>
@@ -28,13 +30,13 @@
                 </div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12" ng-controller = "LoginController">
                             <form id="login-form" action="http://phpoll.com/login/process" method="post" role="form" style="display: block;">
                                 <div class="form-group">
-                                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Корисничко име" value="">
+                                    <input ng-model="userName" type="text" name="username" id="username-log" tabindex="1" class="form-control" placeholder="Корисничко име" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Лозинка">
+                                    <input ng-model="password" type="password" name="password" id="password-log" tabindex="2" class="form-control" placeholder="Лозинка">
                                 </div>
                                 <div class="form-group text-center">
                                     <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
@@ -43,7 +45,7 @@
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
-                                            <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Уђи на мрежу">
+                                            <input ng-click="login(userName, password)" type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Уђи на мрежу">
                                         </div>
                                     </div>
                                 </div>
@@ -59,13 +61,13 @@
                             </form>
                             <form id="register-form" action="http://phpoll.com/register/process" method="post" role="form" style="display: none;">
                                 <div class="form-group">
-                                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Корисничко име" value="">
+                                    <input type="text" name="username" id="username-register" tabindex="1" class="form-control" placeholder="Корисничко име" value="">
                                 </div>
                                 <div class="form-group">
                                     <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Мејл адреса" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Лозинка">
+                                    <input type="password" name="password" id="password-register" tabindex="2" class="form-control" placeholder="Лозинка">
                                 </div>
                                 <div class="form-group">
                                     <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Потврдите лозинку">
@@ -78,7 +80,7 @@
                                     </div>
                                 </div>
                             </form>
-                        </div>
+                        </div>  <!--end of ngController scope -->
                     </div>
                 </div>
             </div>
