--- a/SpajalicaFrontEnd/Login.html
+++ b/SpajalicaFrontEnd/Login.html
@@ -7,10 +7,13 @@
     <script src="js/jquery.backstretch.min.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/login_script.js"></script>
-    <script src="js/Controllers/LoginController.js"></script>
+    <script src="js/app.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style_login.css">
+
+    <script src="js/Services/SharedData.js"></script>
+    <script src="js/Controllers/LoginController.js"></script>
 </head>
 <body>
 <div class="container">
@@ -59,7 +62,7 @@
                                     </div>
                                 </div>
                             </form>
-                            <form id="register-form" action="http://phpoll.com/register/process" method="post" role="form" style="display: none;">
+                            <form id="register-form" method="post" role="form" style="display: none;">
                                 <div class="form-group">
                                     <input type="text" ng-model="userNameReg" ng-style="nameStyleReg" name="username" id="username-register" tabindex="1" class="form-control" placeholder="Корисничко име" value="">
                                 </div>
