--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -39,7 +39,7 @@
 
             <div class="menu visible-md visible-lg">
                 <ul id="menu-list">
-                    <li class="active home-menu"><a href="#home">Профил</a></li>
+                    <li class="home-menu"><a href="#home">Профил</a></li>
                     <li class="news-menu"><a href="#news">Новости</a></li>
                     <li class="match-menu"><a href="#match">Споји!</a></li>
                     <li class="messages-menu"><a href="#messages">Поруке</a></li>
@@ -64,7 +64,14 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 temp-content-wrapper">
                     <div class="temp-content">
 
-                        <section id="home-text" class="active">
+                        <section id="welcome-text" class="active">
+                            <div class="col-sm-12 col-md-12 col-lg-12">
+                                <h2>Добродошли</h2>
+                                <p>Почните са уређивањем свог профила, или одмах крените на претрагу.</p>
+                            </div>
+                        </section><!-- /.welcome-text -->
+
+                        <section id="home-text" class="inactive">
                             <div ng-controller = "ProfileController" class="col-sm-12 col-md-12 col-lg-12">
                                 <h2>Ovde ide profilna strana</h2>
                                 <p>Ovde dolazi PRVI_BROJ: <input ng-model="prviBroj" type="number"/> </p>
