--- a/SpajalicaFrontEnd/index.html
+++ b/SpajalicaFrontEnd/index.html
@@ -56,7 +56,7 @@
                     <img src="images/nature2.jpg" id="news-img" class="inactive" alt="News">
                     <img src="images/nature3.jpg" id="match-img"  class="inactive" alt="Match">
                     <img src="images/nature4.jpg" id="messages-img" class="inactive" alt="Messages">
-                    <img src="images/moustaches.png" id="suggestions-img" class="inactive" alt="Suggestions">
+                    <img src="images/nature5.jpg" id="suggestions-img" class="inactive" alt="Suggestions">
                     <img src="images/nature6.jpg" id="settings-img" class="inactive" alt="Settings">
                 </div>
             </div>
